--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="fc:frame" content="<stringified Embed JSON>" />
     <title>Contact Manager</title>
   </head>
   <body>
